# statsig-rs

./: Cargo.toml  LICENSE  README.md  code_changes.sh  lint_and_test.sh  setup.sh
.github/workflows/: statsig_lint_and_test.yml
src/: client.rs  http.rs  lib.rs  main.rs  models.rs
src/evaluator/: getters.rs  mod.rs  models.rs
tests/: common.rs  dynamic_config.rs
