[package]
name = "statsig-rs"
version = "0.1.0"
edition = "2021"

[lib]
name = "statsig"
path = "src/lib.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = { version = "1.0" }
crossbeam = "0.8"
reqwest = { version = "0.11", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.10"
tokio = { version = "1", features = ["full"] }
tracing = { "version" = "0.1" }

[dev-dependencies]
httptest = "0.15"
