[package]
name = "statsig-rs"
version = "0.6.0"
edition = "2021"
description = "Unofficial crate to interact with statsig.io"
repository = "https://github.com/reidopitaco/statsig-rs"
license = "ISC"
keywords = ["statsig"]

[lib]
name = "statsig_rdp"
path = "src/lib.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = { version = "1.0" }
chrono = { version = "0.4", features = ["serde"] }
crossbeam = "0.8"
reqwest = { version = "0.11", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_with = {version = "2.0", features = ["json"]}
sha2 = "0.10"
tokio = { version = "1", features = ["full"] }
tracing = { "version" = "0.1" }

[dev-dependencies]
httptest = "0.15"
